implement interpreters tests